--- a/DemostracionesPRYE/Continuas/Gamma.tex
+++ b/DemostracionesPRYE/Continuas/Gamma.tex
@@ -8,7 +8,8 @@
   \]
 \end{Def}
 \begin{Teo}
-  Sean $X$ una variable aleatoria continua con distribución Gamma y $f$
+  Sean $X$ una variable aleatoria continua con distribución Gamma
+  de parámetros $\alpha,\beta$ y $f$
   su función de densidad. Entonces,
   \begin{enumerate}
     \item Para todo $x\in\R$, $f(x) \geq 0$.
