--- a/DemostracionesPRYE/Discretas/Uniforme.tex
+++ b/DemostracionesPRYE/Discretas/Uniforme.tex
@@ -12,7 +12,7 @@ sobre los enteros en este caso.
 \begin{Teo}
   Sea $X\sim U(n,m)$. Entonces,
   \begin{enumerate}
-    \item Para todo $x\in\Z$, $P(X=x)\geq0$.
+    \item Para todo $x\in\Z$, $0\leq P(X=x)\leq1$.
     \item $\sum_{x\in\Z}P(X=x) = 1$.
     \item $\text{E}[X] = \frac{n+m}{2}$
     \item $\text{Var}[X] = \frac{(m-n+1)^2-1}{12}$
