--- a/DemostracionesPRYE/main.tex
+++ b/DemostracionesPRYE/main.tex
@@ -106,5 +106,6 @@
 \include{Intro}
 \include{Probabilidad}
 \include{propiedades_var_E}
+\include{funcCarac}
 \include{Distribuciones}
 \end{document}
