--- a/DemostracionesPRYE/Continuas/Chi_cuadrada.tex
+++ b/DemostracionesPRYE/Continuas/Chi_cuadrada.tex
@@ -1,28 +1,29 @@
 \subsubsection{Chi-cuadrada}
 \begin{Def}
     Sea $X$ una variable aleatoria continua, $X$ tiene una
-    distribución $\chi^2$ con parámetro $v$ si su función de densidad
+    distribución $\chi^2$ con parámetro $v\in\R^+$ si su función de densidad
     es:
     \[
         f(x) = \frac{1}{2^{\nicefrac{v}{2}}\Gamma\left(\frac{v}{2}\right)}
         x^{\left(\nicefrac{v}{2}\right)-1}e^{\nicefrac{-x}{2}} \qquad(x\geq0)
-    \]  
+    \]
+    Esto se denotará como $X\sim\chi^2(v)$.
 \end{Def}
 
 \begin{Teo}
-    Si $X \sim \chi^2(v)$ tiene función de densidad $f$, entonces:
+    Sean $X \sim \chi^2(v)$ y $f$ su función de densidad. Entonces:
     \begin{enumerate}
         \item para todo $x\in \R$, $f(x)\geq0$
-        \item $\int_{-\infty}^{\infty}f(x)\diff{x}\geq0$
-        \item $\text{E}[X]= v \qquad(v\geq0)$
-        \item $\text{Var}[X]= 2v \qquad(v\geq0)$
+        \item $\int_{0}^{\infty}f(x)\diff{x}=1$
+        \item $\text{E}[X]= v$
+        \item $\text{Var}[X]= 2v$
     \end{enumerate}
 \end{Teo}
 
 \begin{Demo}~
     \begin{enumerate}
         \item Dado que todos los factores del término que componen a
-        $f$ son positivos, $f\geq0$ para todo $x\geq 0$
+        $f$ son no negativos, $f(x)\geq0$ para todo $x\geq 0$.
         \item Para demostrar esto, basta con demostrar que 
         \[
             \int_{0}^{\infty}x^{\left(\nicefrac{v}{2}\right)-1}
