--- a/DemostracionesPRYE/Continuas/F_dist.tex
+++ b/DemostracionesPRYE/Continuas/F_dist.tex
@@ -2,7 +2,7 @@
 
 \begin{Def}
   Sean $F$ una variable aleatoria continua. $F$ tiene una distribución
-  $f$ de parámetros $u,v\in\R^+$, cuando su función de densidad es
+  $\mathbf{f}$ de parámetros $u,v\in\R^+$, cuando su función de densidad es
   \[f(x)=
   \dfrac{\Gamma\left(\frac{u+v}{2}\right)\left(\frac{u}{v}\right)^{\nicefrac{u}{2}}}
   {\Gamma\left(\frac{u}{2}\right)\Gamma\left(\frac{v}{2}\right)}
@@ -15,10 +15,10 @@
     {\left(1 + \frac{u}{v}x\right)^{\nicefrac{(u+v)}{2}}}
   \qquad (x\in\R^+)
   \]
-  Recordando que $B$ hace referencia a la función beta.
+  Esto se denotará como $F\sim\mathbf{f}(u,v)$.
 \end{Def}
 \begin{Teo}
-  Sean $F\sim F(u,v)$ y $f$ su función de densidad. Entonces,
+  Sean $F\sim \mathbf{f}(u,v)$ y $f$ su función de densidad. Entonces,
   \begin{enumerate}
     \item Para todo $x\in\R$, $f(x) \geq 0$.
     \item $\int_{\R}f(x)\mathrm{d}x=1$.
