--- a/DemostracionesPRYE/Presentacion.tex
+++ b/DemostracionesPRYE/Presentacion.tex
@@ -9,7 +9,6 @@
 \usepackage{mathrsfs}
 \usepackage{thmtools}
 \usepackage{marvosym}
-\usepackage{tipa}
 \usepackage[spanish, es-noquoting, es-lcroman, es-noshorthands]{babel}
 \usetheme{Warsaw}
 \setbeamercovered{transparent}
@@ -105,7 +104,7 @@
       \end{enumerate}
     }
   \end{frame}
-  \begin{frame}{Geometrica}
+  \begin{frame}{Geométrica}
     \only<1-2>{
       \[X\sim\text{Geom}(p)\]
     }
@@ -222,7 +221,7 @@
   \end{frame}
   \begin{frame}{f}
     \only<1-3>{
-      \[F\sim\text{\texthtbardotlessj}\]
+      \[F\sim\mathbf{f}(u,v)\]
     }
     \only<4>{
       \[B(x,y)=\frac{\Gamma(x)\Gamma(y)}{\Gamma(x+y)}\]
